Corrects major typo in attachment
