# backend/src/requests/attachment/CreateAttachmentRequest.ts
@@ -1,4 +1,4 @@
-export interface CreateAttatchmentRequest {
+export interface CreateAttachmentRequest {
   collectionId?: string
   itemId?: string
   locationId?: string
