# backend/src/requests/attachment/index.ts
@@ -1,0 +1,1 @@
+export { CreateAttachmentRequest } from './CreateAttachmentRequest'
