# backend/src/requests/attatchment/index.ts
@@ -1,1 +1,0 @@
-export { CreateAttatchmentRequest } from './CreateAttatchmentRequest'
